==

* Thread-index: load all threads in the background.
* Synchronize maildir flags if so configured in .notmuch-config.
* General XEmbed support in editor: Emacs works.
* Signatures: Include per-account signatures (either included or
  attached).
* Saved searches: Save a search with 'C-S', then browse saved searches
  and stats with 'C-f'. You can also browse search history using Up
  and Down in the search-bar.
* All actions requiring write-access run in the background and wait for
  any reads to finish. All read operations need to wait for any ongoing
  write-operations to finish. All write-operations are therefore
  asynchronous and non-blocking. Read-operations will only block on long
  write operations.
* Tags can be modified on multiple marked threads with + and -.
* Modify tags on single message, they are updated in thread-view and
  thread-index.
* scss: fix #82: make all variables global.
* C-d / C-u / Page in thread-index: Page and move cursor in thread
  index.
* Special keys like Tab and Home can now be used in user-keybindings.
* M. Dietrich: clock_format=year option to use clock format from this or
  previous year setting in thread-index.
* M. Dietrich, G. Hope: Background color in thread-index configurable.
* M. Dietrich: Use correct reply-to address for mailinglist-messages.
* Gravatar is configurable.
* #103: Drafts are saved on force close or quit by default.
* C-v: duplicate and refine query.
* Mark thread moves to next by default.
* ti: set cursor to first thread if we are at first thread when new
  addition is made.

== v0.5 / 2016-02-06

* Startup queries are invincible.
* q: ask to quit, Q: quit right away.
* C-f: Toggle flat or indented view of messages.
* C-i: Show remote images (cid-type images are not supported yet).
* A-#: Page to # page.
* Add gravatar support
* M-p: Toggle auto poll.
* C-j / C-k: Jump and scroll to next or previous element.
* thread-index: C-Enter: open thread in new window.